examples/v0.4/errors/unknown_property_access.nova
User: M = {
    name: S
}

user: User = {
    name = "Varun"
}

print(user.city)

/*
Expected Error:

Unknown property 'city'.
*/